<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffffffff">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:id="@+id/a"
        android:gravity="center"
        android:background="#DA5F6A"
        android:src="@drawable/hint_icon"
        android:scaleType="fitCenter"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/text_dialog"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:textSize="18sp"
        android:text = "@string/sure_hint"
        android:textColor="#ff000000"
        android:gravity="center_horizontal"
        android:layout_below="@+id/a"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true" />


    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_alignParentEnd="true"
        android:layout_alignStart="@+id/text_dialog">

        <TextView
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:id="@+id/hint_container"
            android:textSize="18sp"
            android:textColor="#ff000000"
            android:gravity="center_horizontal"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.748"
            app:layout_constraintHorizontal_bias="0.0" />

        <Button
            android:id="@+id/btn_ok_dialog"
            android:layout_width="100dp"
            android:layout_height="48dp"
            android:background="@color/DeepSkyBlue"
            android:textColor="#ffffffff"
            android:text= "@string/yes_hint"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.975"
            android:layout_marginTop="229dp" />

        <Button
            android:id="@+id/btn_cancel_dialog"
            android:layout_width="100dp"
            android:layout_height="48dp"
            android:background="@color/DeepSkyBlue"
            android:textColor="#ffffffff"
            android:text= "@string/no_hint"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="229dp" />

    </android.support.constraint.ConstraintLayout>

</RelativeLayout>


