<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/rl"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:background="@drawable/app_background"
        android:focusable="true"
        android:focusableInTouchMode="true"
        >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:typeface="serif"
        android:textColor="@color/MintCream"
        android:gravity="center"
...
        android:typeface="serif"
        android:textSize="14sp"
        android:layout_below="@+id/textView2"
        android:layout_alignStart="@+id/words_container" />

    <ImageButton
        android:id="@+id/btn_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:onClick="onInfClick"
        app:srcCompat="@drawable/hint_icon"
        android:layout_above="@+id/solve"
...
